example/lib/src/arbs/errors/app_de.arb
{
  "@@locale": "de",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Ein Fehler ist aufgetreten",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Ein unerwarteter Fehler ist aufgetreten",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Fehlerbericht wurde erfolgreich gesendet.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}